// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBox (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#329932",
      "borderColor": "#329932",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "marginBottom": 7,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={undefined}
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": 23,
          "margin": 1,
          "marginBottom": 1,
          "resizeMode": "contain",
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0e0e0e",
          "flex": 9,
          "fontFamily": "telegrama_raw",
          "paddingRight": 30,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#141313",
        "borderColor": "#141313",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with image) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#329932",
      "borderColor": "#329932",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "marginBottom": 7,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": 23,
          "margin": 1,
          "marginBottom": 1,
          "resizeMode": "contain",
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0e0e0e",
          "flex": 9,
          "fontFamily": "telegrama_raw",
          "paddingRight": 30,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#141313",
        "borderColor": "#141313",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with title and image) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#329932",
      "borderColor": "#329932",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "marginBottom": 7,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": 23,
          "margin": 1,
          "marginBottom": 1,
          "resizeMode": "contain",
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0e0e0e",
          "flex": 9,
          "fontFamily": "telegrama_raw",
          "paddingRight": 30,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#141313",
        "borderColor": "#141313",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with title) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#329932",
      "borderColor": "#329932",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "marginBottom": 7,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={undefined}
      style={
        Object {
          "backgroundColor": "#141313",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": 23,
          "margin": 1,
          "marginBottom": 1,
          "resizeMode": "contain",
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0e0e0e",
          "flex": 9,
          "fontFamily": "telegrama_raw",
          "paddingRight": 30,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#141313",
        "borderColor": "#141313",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;
